# libnk

./: .clang-format  .gitignore  .pre-commit-config.yaml  APIREFERENCE.md  CMakeLists.txt  CMakePresets.json  DOCUMENTATION.md  LICENSE  README.md
emscripten/: index_webgl_debug.html  index_webgl_release.html  index_webgpu_release.html
examples/: CMakeLists.txt
examples/draw_image/: CMakeLists.txt  draw_image.cpp  image.h
examples/draw_multiple_images/: CMakeLists.txt  draw_multiple_images.cpp  image.h
examples/minimal/: CMakeLists.txt  minimal.cpp
examples/nigogame/: CMakeLists.txt  nigogame.cpp
examples/nigogame/game/: actors.cpp  actors.h  assets.h  game.cpp  game.h  game_scene.cpp  main_menu_scene.cpp  memory.h  moco.cpp  moco.h  nigo.h  player.cpp  player.h  tilemap.cpp  tilemap.h
include/nk/: app.h  canvas.h  hid.h
scripts/: create_release.py  index_debug.html
shaders/d3d12/: README.md  bin2c.py  compile_shaders.bat  sprite_ps.hlsl  sprite_vs.hlsl
src/: CMakeLists.txt
src/backend/: canvas_internal.cpp  canvas_internal.h  hid_internal.cpp  hid_internal.h  texture_packer.cpp  texture_packer.h  utils.h
src/backend/wasm/: wasm_app.cpp  wasm_canvas_webgl.cpp  wasm_canvas_webgl.h  wasm_canvas_webgpu.cpp  wasm_canvas_webgpu.h  wasm_common.h  wasm_hid.cpp  wasm_structs.h  wasm_utils.cpp
src/backend/windows/: sprite_shaders.h  windows_app.cpp  windows_canvas_d3d12.cpp  windows_canvas_d3d12.h  windows_common.h  windows_hid.cpp  windows_structs.h  windows_utils.cpp
