project(examples)

if (USE_EMSCRIPTEN)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -gsource-map")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -sWASM=1 -sUSE_WEBGPU=1")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-command-line-argument")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -sALLOW_MEMORY_GROWTH=1 -sALLOW_TABLE_GROWTH=1 -sEXIT_RUNTIME=0")
	if(CMAKE_BUILD_TYPE STREQUAL "Debug")
        if (USE_WEBGPU)
            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --shell-file ${CMAKE_SOURCE_DIR}/emscripten/index_webgpu_debug.html")
        elseif(USE_WEBGL)
            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --shell-file ${CMAKE_SOURCE_DIR}/emscripten/index_webgl_debug.html")
        endif()
    else()
        if (USE_WEBGPU)
            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --shell-file ${CMAKE_SOURCE_DIR}/emscripten/index_webgpu_release.html")
        elseif(USE_WEBGL)
            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --shell-file ${CMAKE_SOURCE_DIR}/emscripten/index_webgl_release.html")
        endif()
    endif()
    set(CMAKE_EXECUTABLE_SUFFIX ".html")
endif()

add_subdirectory(minimal)
add_subdirectory(draw_image)
add_subdirectory(draw_multiple_images)
add_subdirectory(nigogame)
